--- a/app/views/merchant/index.html.erb
+++ b/app/views/merchant/index.html.erb
@@ -51,7 +51,7 @@
                                     >
                                     <div class="figcaption bg-base"></div>
                                     <div class="figcaption-btn">
-                                        <a href="#" class="btn btn-xs btn-b-white theater"><i class="fa fa-credit-card"></i> Donate</a>
+                                        <a href="/donate/new?merchantid=<%= merchant.merchantid %>" class="btn btn-xs btn-b-white theater"><i class="fa fa-credit-card"></i> Donate</a>
                                         <a href="<%= "http://" +  @userhost + "/giftcard/new/" +  merchant.merchantid.to_s %>" class="btn btn-xs btn-b-white"><i class="fa fa-check-square-o"></i> Check Balance</a>
                                     </div>
                                 </div>
